--- a/Postman Collections/CourseRegistrationEAFinalProject.json
+++ b/Postman Collections/CourseRegistrationEAFinalProject.json
@@ -244,7 +244,7 @@
           "description": "API Collection which is related with Course."
         },
         {
-          "name": "New Folder",
+          "name": "Sign In/Up",
           "item": [],
           "id": "2316bb9c-053d-451e-b232-a6b918268488"
         }
@@ -283,12 +283,12 @@
   ],
   "variable": [
     {
-      "id": "2a023868-1dbd-4396-b3d6-bb38ef9ed5e3",
+      "id": "04d2718e-d460-4922-a842-f761223e4a03",
       "key": "baseURL",
       "value": "localhost"
     },
     {
-      "id": "95eccd76-d2f8-432c-97c8-bc2b57c45085",
+      "id": "8cb8706a-68f9-48fb-96f3-091b71d90cfc",
       "key": "port",
       "value": "8010"
     }
