Postman updated CourseRegistrationEAFinalProject

--- a/Postman Collections/CourseRegistrationEAFinalProject.json
+++ b/Postman Collections/CourseRegistrationEAFinalProject.json
@@ -275,6 +275,11 @@
           ],
           "id": "2316bb9c-053d-451e-b232-a6b918268488",
           "description": "Sign In/Up API"
+        },
+        {
+          "name": "New Folder",
+          "item": [],
+          "id": "c0ed9843-bf9f-4517-b119-3433167ac55b"
         }
       ],
       "id": "4fe13d3f-00fe-4ef8-a3a8-2ab339b66c47",
@@ -311,12 +316,12 @@
   ],
   "variable": [
     {
-      "id": "3d6fc4af-7a8c-4f8c-96b2-648b9c17285d",
+      "id": "e0c01bbe-c1f4-49e6-a19a-398fea47e909",
       "key": "baseURL",
       "value": "localhost"
     },
     {
-      "id": "b46a723b-e547-458d-a25b-050f5663604f",
+      "id": "f54ff115-8ce7-4991-be20-3e4eb66a80f2",
       "key": "port",
       "value": "8010"
     }
