--- a/Postman Collections/CourseRegistrationEAFinalProject.json
+++ b/Postman Collections/CourseRegistrationEAFinalProject.json
@@ -268,6 +268,15 @@
               "request": {
                 "method": "POST",
                 "header": [],
+                "body": {
+                  "mode": "raw",
+                  "raw": "{\n    \"username\": \"mwin@miu.edu\",\n    \"password\": \"P@ssw0rd\"\n}",
+                  "options": {
+                    "raw": {
+                      "language": "json"
+                    }
+                  }
+                },
                 "url": "http://{{baseURL}}:{{port}}/signup"
               },
               "response": []
@@ -347,12 +356,12 @@
   ],
   "variable": [
     {
-      "id": "81703301-4802-423d-82b4-4e57ce95c38d",
+      "id": "bccf19f5-2f6c-4205-a3f9-6fa4454c8612",
       "key": "baseURL",
       "value": "localhost"
     },
     {
-      "id": "58e44772-38a0-4f31-b46f-c51bf5009361",
+      "id": "b36b6d46-811b-4ab4-84b4-3bb85002ac84",
       "key": "port",
       "value": "8010"
     }
