--- a/Postman Collections/CourseRegistrationEAFinalProject.json
+++ b/Postman Collections/CourseRegistrationEAFinalProject.json
@@ -319,6 +319,11 @@
             }
           ],
           "id": "c0ed9843-bf9f-4517-b119-3433167ac55b"
+        },
+        {
+          "name": "New Folder",
+          "item": [],
+          "id": "6b87a4b7-5a91-4018-92e3-9e08f8fcd918"
         }
       ],
       "id": "4fe13d3f-00fe-4ef8-a3a8-2ab339b66c47",
@@ -355,12 +360,12 @@
   ],
   "variable": [
     {
-      "id": "0a2e40c2-f5bc-4a3e-815f-8effb2fb23b0",
+      "id": "d440e3ce-d34e-41f6-9aa0-7e3137712d48",
       "key": "baseURL",
       "value": "localhost"
     },
     {
-      "id": "c25b3fc5-f9f5-4516-af72-eb33761c422d",
+      "id": "1b67e0ee-6ec9-4929-ae3a-2d2e1bc525e6",
       "key": "port",
       "value": "8010"
     }
